# sec-filings-bu-affiliation

./: .env.example  .gitattributes  .gitignore  Architecture.md  CLAUDE.md  CLAUDE2.md  IMPLEMENTATION_COMPLETE.md  NLP_IMPLEMENTATION_SUMMARY.md  README.md  devlog.txt  pyproject.toml  requirements.txt  schema.sql  test_nlp_features.py
.github/: copilot-instructions.md
examples/: fetch_company_filings.py  find_bu_affiliations.py  nlp_extraction_demo.py  parse_10k.py  search_by_year_range.py  search_specific_filing.py
src/: database.py  test_fakes.py
src/sec_filings/: __init__.py  affiliation_search.py  biography_extractor.py  cache.py  client.py  config.py  database.py  exceptions.py  parser.py
test_cache/: filings.db
tests/: __init__.py  database_tests.py  llm_tests.py  test_client.py
tests/files/: q1_2025.idx
